tests/baselines/reference/scannerNumericLiteral8.errors.txt
==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral8.ts (1 errors) ====
    -03
     ~~
!!! error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher.